Attempt to fix billion errors on mobile again
This reverts commit 377eeb593644395ded54040a5ca5aed672230b60 and attempts another fix.

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,8 +1,5 @@
 #app {
    --app-padding: 20px;
-   --stable-vh: 100vh;
-   --stable-vh-double: 200vh;
-   --stable-vh-quad: 400vh;
    min-height: 100vh;
    padding: var(--app-padding);
 }
